Reservation mobile done + bugfix

--- a/CSS/index_style.css
+++ b/CSS/index_style.css
@@ -121,7 +121,7 @@ body {
         display: flex;
         width: fit-content;
         background-color: #314E52;
-        margin-right: 2rem;
+        margin-right: 1.30rem;
     }
 
     .navbar-links ul {
